--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -19,6 +19,7 @@
             <p class="mb-4">Create categories and assign tags to organise your transactions.</p>
             <form id="category-form" class="space-y-4">
                 <label class="block">Category Name<br><input type="text" id="category-name" class="border p-2 rounded w-full" data-help="Name for the category"></label>
+                <label class="block">Description<br><textarea id="category-description" class="border p-2 rounded w-full" data-help="Description for the category"></textarea></label>
                 <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Create Category</button>
             </form>
             <div class="mt-6 bg-white p-4 rounded shadow">
@@ -37,7 +38,7 @@ let categoryTable;
 async function loadCategories() {
     const res = await fetch('../php_backend/public/categories.php');
     const cats = await res.json();
-    const data = cats.map(c => ({id: c.id, name: c.name, tags: c.tags.map(t => t.name)}));
+    const data = cats.map(c => ({id: c.id, name: c.name, description: c.description, tags: c.tags.map(t => t.name)}));
     if (categoryTable) {
         categoryTable.setData(data);
         return;
@@ -47,6 +48,7 @@ async function loadCategories() {
         layout: 'fitColumns',
         columns: [
             { title: 'Name', field: 'name', formatter: badgeFormatter('bg-green-200 text-green-800') },
+            { title: 'Description', field: 'description' },
             { title: 'Tags', field: 'tags', formatter: badgeFormatter('bg-blue-200 text-blue-800') },
             { title: 'Actions', formatter: function(cell){
                 const c = cell.getRow().getData();
@@ -57,10 +59,12 @@ async function loadCategories() {
                 editBtn.addEventListener('click', async () => {
                     const name = prompt('Category Name', c.name);
                     if (name === null) return;
+                    const description = prompt('Description', c.description || '');
+                    if (description === null) return;
                     await fetch('../php_backend/public/categories.php', {
                         method: 'PUT',
                         headers: {'Content-Type': 'application/json'},
-                        body: JSON.stringify({id: c.id, name})
+                        body: JSON.stringify({id: c.id, name, description})
                     });
                     loadCategories();
                     showMessage('Category updated');
@@ -111,12 +115,14 @@ async function loadCategories() {
 document.getElementById('category-form').addEventListener('submit', async e => {
     e.preventDefault();
     const name = document.getElementById('category-name').value;
+    const description = document.getElementById('category-description').value;
     await fetch('../php_backend/public/categories.php', {
         method: 'POST',
         headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify({name})
+        body: JSON.stringify({name, description})
     });
     document.getElementById('category-name').value = '';
+    document.getElementById('category-description').value = '';
     loadCategories();
     showMessage('Category created');
 });
