--- a/frontend/groups.html
+++ b/frontend/groups.html
@@ -19,6 +19,7 @@
             <p class="mb-4">Create groups to collect related categories for reporting.</p>
             <form id="group-form" class="space-y-4">
                 <label class="block">Group Name<br><input type="text" id="group-name" class="border p-2 rounded w-full" data-help="Name for the group"></label>
+                <label class="block">Description<br><textarea id="group-description" class="border p-2 rounded w-full" data-help="Description for the group"></textarea></label>
                 <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Create Group</button>
             </form>
             <div class="mt-6 bg-white p-4 rounded shadow">
@@ -46,6 +47,7 @@ async function loadGroups() {
         layout: 'fitColumns',
         columns: [
             { title: 'Name', field: 'name', formatter: badgeFormatter('bg-purple-200 text-purple-800') },
+            { title: 'Description', field: 'description' },
             { title: 'Actions', formatter: function(cell){
                 const g = cell.getRow().getData();
                 const container = document.createElement('div');
@@ -55,10 +57,12 @@ async function loadGroups() {
                 edit.addEventListener('click', async () => {
                     const name = prompt('Group Name', g.name);
                     if (name === null) return;
+                    const description = prompt('Description', g.description || '');
+                    if (description === null) return;
                     await fetch('../php_backend/public/groups.php', {
                         method: 'PUT',
                         headers: {'Content-Type': 'application/json'},
-                        body: JSON.stringify({id: g.id, name})
+                        body: JSON.stringify({id: g.id, name, description})
                     });
                     loadGroups();
                     showMessage('Group updated');
@@ -87,12 +91,14 @@ async function loadGroups() {
 document.getElementById('group-form').addEventListener('submit', async e => {
     e.preventDefault();
     const name = document.getElementById('group-name').value;
+    const description = document.getElementById('group-description').value;
     await fetch('../php_backend/public/groups.php', {
         method: 'POST',
         headers: {'Content-Type': 'application/json'},
-        body: JSON.stringify({name})
+        body: JSON.stringify({name, description})
     });
     document.getElementById('group-name').value = '';
+    document.getElementById('group-description').value = '';
     loadGroups();
     showMessage('Group created');
 });
