--- a/frontend/topbar.html
+++ b/frontend/topbar.html
@@ -1,8 +1,8 @@
 
-<header class="fixed top-0 left-0 right-0 z-50 bg-blue-600 text-white h-16 flex items-center shadow">
+<header class="fixed top-0 left-0 right-0 z-50 bg-indigo-600 text-white h-16 flex items-center shadow">
   <div class="w-full flex items-center justify-between px-4">
     <div class="flex items-center space-x-4">
-      <button id="menu-toggle" class="md:hidden bg-blue-700 p-2 rounded"><i class="fa-solid fa-bars"></i></button>
+      <button id="menu-toggle" class="md:hidden bg-indigo-700 p-2 rounded"><i class="fa-solid fa-bars"></i></button>
       <div class="font-bold text-lg">Personal Finance Manager</div>
     </div>
     <div class="flex items-center space-x-4">
