--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <title>Finance Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="logo.svg">
+    <link rel="icon" type="image/svg+xml" href="wallet.svg">
     <style>
         body { font-family: 'Roboto', sans-serif; font-weight: 300; }
     </style>
