--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -1,5 +1,5 @@
 <!-- Navigation menu shared across pages -->
-<img src="logo.svg" alt="Finance Manager Logo" class="w-32 mb-4 mx-auto">
+<img src="wallet.svg" alt="Finance Manager Logo" class="w-24 mb-4 mx-auto">
 <h2 class="text-xl font-semibold mb-4">Menu</h2>
 <div class="space-y-4">
   <div>
