Fit Tabulator tables to data and freeze first column

--- a/frontend/account_dashboard.html
+++ b/frontend/account_dashboard.html
@@ -43,7 +43,7 @@
         .then(data => {
             tailwindTabulator(document.getElementById('accounts-table'), {
                 data,
-                layout: 'fitColumns',
+                layout: 'fitData',
                 columns: [
                     { title: 'Name', field: 'name' },
                     { title: 'Transactions', field: 'transactions', hozAlign: 'right' },
