--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -74,7 +74,7 @@
 
         tailwindTabulator(el, {
             data: data,
-            layout: 'fitColumns',
+            layout: 'fitData',
             columns: columns
         });
     }
