--- a/frontend/missing_tags.html
+++ b/frontend/missing_tags.html
@@ -33,7 +33,7 @@
         } else {
             table = tailwindTabulator('#untagged-table', {
                 data: data,
-                layout: 'fitColumns',
+                layout: 'fitData',
                 initialSort: [{column:'count', dir:'desc'}],
                 columns: [
                     { title: 'Description', field: 'description' },
