--- a/frontend/monthly_dashboard.html
+++ b/frontend/monthly_dashboard.html
@@ -96,7 +96,7 @@
 
         tailwindTabulator(el, {
             data: data,
-            layout: 'fitColumns',
+            layout: 'fitData',
             columns: columns
         });
     }
