--- a/frontend/search.html
+++ b/frontend/search.html
@@ -52,7 +52,7 @@
                 if (data.results && data.results.length) {
                     tailwindTabulator(gridEl, {
                         data: data.results,
-                        layout: 'fitColumns',
+                        layout: 'fitData',
                         columns: [
                             { title: 'Date', field: 'date' },
                             { title: 'Description', field: 'description', formatter: function(cell){
