--- a/frontend/yearly_dashboard.html
+++ b/frontend/yearly_dashboard.html
@@ -78,7 +78,7 @@
 
         tailwindTabulator(el, {
             data: data,
-            layout: 'fitColumns',
+            layout: 'fitData',
             columns: columns
         });
     }
